# lan-desk

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/lan-desk-audio/: Cargo.toml
crates/lan-desk-audio/src/: lib.rs  opus_codec.rs
crates/lan-desk-capture/: Cargo.toml
crates/lan-desk-capture/src/: amf.rs  color_convert.rs  encoder.rs  frame.rs  gpu_encoder.rs  h264.rs  lib.rs  linux.rs  mac.rs  nvenc.rs  pipewire_portal.rs  qsv.rs  vaapi.rs  videotoolbox.rs  wayland.rs  win.rs
crates/lan-desk-clipboard/: Cargo.toml
crates/lan-desk-clipboard/src/: lib.rs
crates/lan-desk-input/: Cargo.toml  build.rs
crates/lan-desk-input/src/: lib.rs  linux.rs  mac.rs  types.rs  wayland.rs  win.rs
crates/lan-desk-protocol/: Cargo.toml
crates/lan-desk-protocol/src/: codec.rs  discovery.rs  integrity.rs  lib.rs  message.rs
crates/lan-desk-server/: Cargo.toml
crates/lan-desk-server/src/: lib.rs  tls.rs
crates/lan-desk-server/src/session/: auth.rs  capture.rs  file_transfer.rs  mod.rs  platform.rs  reboot.rs  screen_blank.rs  shell.rs
docs/: ARCHITECTURE.md  CODE_SIGNING.md  FAQ.md  PROTOCOL.md  QUICK_START.md  REMOTE_ACCESS.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: detect-opus.cjs
src/: App.vue  env.d.ts  integrity.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  portable.rs  state.rs  ws_bridge.rs
src-tauri/src/commands/: chat.rs  connection.rs  discovery.rs  file_browser.rs  file_transfer.rs  input.rs  mobile_stubs.rs  mod.rs  remote_control.rs  screen_blank.rs  server.rs  shell.rs  special_keys.rs
src/composables/: useAnnotation.ts  useAudio.ts  useFrameRenderer.ts  useInputHandler.ts  useReconnect.ts  useRecording.ts  useRemoteCursor.ts  useSettings.ts  useStats.ts  useTheme.ts  useToast.ts  useTouchInput.ts
src/composables/__tests__/: useAnnotation.test.ts  useAudio.test.ts  useFrameRenderer.test.ts  useInputHandler.test.ts  useReconnect.test.ts  useRecording.test.ts  useRemoteCursor.test.ts  useSettings.test.ts  useStats.test.ts  useTheme.test.ts  useToast.test.ts
src/i18n/: en.json  index.ts  zh.json
src/i18n/__tests__/: i18n.test.ts
src/styles/: main.css
src/views/: ChatPanel.vue  Discovery.vue  Donate.vue  FileBrowser.vue  RemoteView.vue  Settings.vue  Terminal.vue
