[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/lan-desk-protocol",
    "crates/lan-desk-capture",
    "crates/lan-desk-input",
    "crates/lan-desk-clipboard",
    "crates/lan-desk-server",
    "crates/lan-desk-audio",
]

[workspace.package]
license = "MIT"
description = "LAN remote desktop control application"
repository = "https://github.com/bbyybb/lan-desk"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
rustls-pki-types = "1"
sha2 = "0.10"
