[package]
name = "lan-desk-audio"
version = "1.0.0"
edition = "2021"
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = []
opus = ["audiopus"]

[dependencies]
lan-desk-protocol = { path = "../lan-desk-protocol" }
anyhow = { workspace = true }
tracing = { workspace = true }
cpal = "0.15"
audiopus = { version = "0.3.0-rc.0", optional = true }
