[package]
name = "lan-desk-capture"
version = "1.0.1"
edition = "2021"
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["pipewire-capture"]
pipewire-capture = ["dep:ashpd", "dep:pipewire"]

[dependencies]
lan-desk-protocol = { path = "../lan-desk-protocol" }
anyhow = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
openh264 = "0.8"
rayon = "1.10"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
foreign-types = "0.5"
objc2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shm", "randr", "xfixes", "allow-unsafe-code"] }
libc = "0.2"
libloading = "0.8"
tempfile = "3"
# PipeWire/Portal 屏幕捕获（可选，需系统安装 libpipewire-0.3-dev）
ashpd = { version = "0.13", default-features = false, features = ["tokio"], optional = true }
pipewire = { version = "0.8", optional = true }
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }
