[package]
name = "lan-desk-clipboard"
version = "1.0.1"
edition = "2021"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
lan-desk-protocol = { path = "../lan-desk-protocol" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arboard = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
png = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_DataExchange"] }
