[package]
name = "lan-desk-input"
version = "1.0.0"
edition = "2021"
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
lan-desk-protocol = { path = "../lan-desk-protocol" }
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest", "randr", "xfixes"] }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
